# paass

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
.github/: CONTRIBUTING.md  SUPPORT.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md
Acquisition/: CMakeLists.txt
Acquisition/Interface/: CMakeLists.txt
Acquisition/Interface/include/: EmulatedInterface.hpp  PixieInterface.h  PixieSupport.h
Acquisition/Interface/source/: AcquisitionConfig.cpp  AcquisitionInterface.cpp  EmulatedInterface.cpp  PixieInterface.cpp  PixieSupport.cpp
Acquisition/MCA/: CMakeLists.txt
Acquisition/MCA/source/: MCA_exec.cpp
Acquisition/Poll/: CMakeLists.txt
Acquisition/Poll/include/: poll2_core.h
Acquisition/Poll/source/: poll2.cpp  poll2_core.cpp
Acquisition/Setup/: CMakeLists.txt
Acquisition/Utilities/listener/: CMakeLists.txt
Acquisition/Utilities/monitor/: CMakeLists.txt
Acquisition/Utilities/monitor/source/: monitor.cpp
Acquisition/Utilities/param_scan/: CMakeLists.txt
Acquisition/Utilities/param_scan/source/: paramScan.cpp
Acquisition/Utilities/send_alarm/: CMakeLists.txt
Acquisition/set2root/: CMakeLists.txt
Analysis/: CMakeLists.txt
Analysis/Resources/: CMakeLists.txt
Analysis/Resources/include/: ChannelConfiguration.hpp
Analysis/Resources/source/: PolynomialCfd.cpp
Analysis/Resources/tests/: CMakeLists.txt
Analysis/ScanLibraries/: CMakeLists.txt
Analysis/ScanLibraries/include/: ProcessedXiaData.hpp  ScanInterface.hpp  Unpacker.hpp  XiaData.hpp  XiaListModeDataMask.hpp
Analysis/ScanLibraries/source/: ScanInterface.cpp  Unpacker.cpp  XiaListModeDataMask.cpp
Analysis/ScanLibraries/tests/: CMakeLists.txt
Analysis/Utilities/: CMakeLists.txt
Analysis/Utilities/EventReader/: CMakeLists.txt
Analysis/Utilities/EventReader/include/: EventReaderUnpacker.hpp
Analysis/Utilities/EventReader/source/: EventReaderUnpacker.cpp
Analysis/Utilities/HeadReader/: CMakeLists.txt
Analysis/Utilities/HexReader/: CMakeLists.txt
Analysis/Utilities/RootScanner/: CMakeLists.txt
Analysis/Utilities/Scope/: CMakeLists.txt
Analysis/Utilities/Scope/include/: ScopeUnpacker.hpp
Analysis/Utilities/Scope/source/: ScopeScanner.cpp  ScopeUnpacker.cpp
Analysis/Utilities/Skeleton/: CMakeLists.txt
Analysis/Utilities/Skeleton/include/: SkeletonUnpacker.hpp
Analysis/Utilities/Skeleton/source/: SkeletonUnpacker.cpp
Analysis/Utilities/ldf2parquet/: CMakeLists.txt
Analysis/Utilities/ldf2parquet/include/: Ldf2ParquetInterface.hpp  Ldf2ParquetUnpacker.hpp
Analysis/Utilities/ldf2parquet/source/: CMakeLists.txt  ldf2ParquetInterface.cpp  ldf2ParquetUnpacker.cpp  ldf2parquet.cpp
Analysis/Utilities/list_mode_converter/: CMakeLists.txt
Analysis/Utilities/list_mode_converter/include/: list_mode_converter_interface.hpp  list_mode_converter_unpacker.hpp
Analysis/Utilities/list_mode_converter/source/: list_mode_converter.cpp  list_mode_converter_interface.cpp  list_mode_converter_unpacker.cpp
Analysis/Utkscan/: CMakeLists.txt
Analysis/Utkscan/analyzers/: CMakeLists.txt
Analysis/Utkscan/analyzers/include/: TraceAnalyzer.hpp
Analysis/Utkscan/analyzers/source/: CfdAnalyzer.cpp  FittingAnalyzer.cpp
Analysis/Utkscan/core/: CMakeLists.txt
Analysis/Utkscan/core/include/: DetectorDriver.hpp  Globals.hpp  HighResTimingData.hpp  MapNodeXmlParser.hpp  TreeCorrelator.hpp
Analysis/Utkscan/core/source/: DetectorDriver.cpp  DetectorDriverXmlParser.cpp  GlobalsXmlParser.cpp  MapNodeXmlParser.cpp  TreeCorrelator.cpp  UtkScanInterface.cpp  UtkUnpacker.cpp  WalkCorrector.cpp
Analysis/Utkscan/experiment/: CMakeLists.txt
Analysis/Utkscan/processors/: CMakeLists.txt
Analysis/Utkscan/processors/include/: EventProcessor.hpp  GammaScintProcessor.hpp
Analysis/Utkscan/processors/source/: CMakeLists.txt  CloverFragProcessor.cpp  CloverProcessor.cpp  DoubleBetaProcessor.cpp  GammaScintFragProcessor.cpp  GammaScintProcessor.cpp  GeProcessor.cpp  LiquidScintProcessor.cpp  LogicProcessor.cpp  PspmtProcessor.cpp  RootDevProcessor.cpp  SingleBetaProcessor.cpp  VandleProcessor.cpp
Cmake/functions/: GenerateDAQConfig.cmake  paass_configure_target.cmake
Cmake/modules/: FindPLX.cmake  FindRE2.cmake  FindROOT.cmake  FindXIA.cmake
Core/: CMakeLists.txt
Core/source/: CMakeLists.txt  CTerminal.cpp
DataFormats/: CMakeLists.txt
Hardware/: CMakeLists.txt
Hardware/Interface/: CMakeLists.txt
Hardware/Interface/include/: AcquisitionInterface.hpp
Hardware/xia/pixie/pixie16/: CMakeLists.txt
Hardware/xia/pixie/pixie16/include/: PixieInterface.h
Hardware/xia/pixie/pixie16/source/: PixieInterface.cpp  PixieSupport.cpp  XiaListModeDataDecoder.cpp
Resources/: CMakeLists.txt
Resources/include/: HelperEnumerations.hpp  HelperFunctions.hpp  StringManipulationFunctions.hpp
Share/: CMakeLists.txt
Share/broadcom/systemd/: broadcom.service
Share/modulefiles/: paass
Terminal/: CMakeLists.txt
Terminal/include/: CTerminal.h  TermColors.h
Terminal/source/: CTerminal.cpp  Display.cpp
Tests/: CMakeLists.txt  tests.cpp
Tests/functional/: CMakeLists.txt
Tests/include/: UnitTestSampleData.hpp
Tests/integration/: CMakeLists.txt
Tests/integration/hardware/: CMakeLists.txt
Tests/unit/: CMakeLists.txt
Tests/unit/acquisition/interface/: CMakeLists.txt  test_AcquisitionConfig.cpp
Tests/unit/analysis/resources/: CMakeLists.txt  test_ChannelConfiguration.cpp  test_GslFitter.cpp  test_PolynomialCfd.cpp  test_RootFitter.cpp  test_TraditionalCfd.cpp  test_XiaCfd.cpp
Tests/unit/analysis/scan_libraries/: CMakeLists.txt  test_Trace.cpp  test_XiaData.cpp  test_XiaListModeDataDecoder.cpp  test_XiaListModeDataEncoder.cpp  test_XiaListModeDataMask.cpp
Tests/unit/analysis/utkscan/core/: CMakeLists.txt  test_DetectorSummary.cpp  test_RootHandler.cpp  test_WalkCorrector.cpp
Tests/unit/hardware/xia/pixie/pixie16/: CMakeLists.txt  test_XiaListModeDataEncoder.cpp  test_dsp_functions.cpp
Tests/unit/resources/: CMakeLists.txt  test_HelperFunctions.cpp  test_StringManipulationFunctions.cpp
